# konwersja-do-odcieni-szarosci-projekt

./: .gitignore  CMakeLists.txt  GUI.cpp  GUIframe.cpp  README.md  headers.h  main.cpp
WxFormBuilderTemplates/: Template.fbp
include/: GUI.h  GUIframe.h  SliderData.h
sources/: GUIframe.cpp
